--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.1",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.1",
+    "react-native-share": "^9.2.1",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
